fix nav-menu-sub-categories z-index problem

--- a/product-page/products-style.css
+++ b/product-page/products-style.css
@@ -401,6 +401,7 @@ ul {
   line-height: 16px;
   font-weight: normal;
   color: #666;
+  z-index: 1;
 }
 
 .nav-menu-sub-categories ul {
